--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,17 @@ dependencies:
   bloc: ^8.1.2
   cloud_firestore: ^4.8.4
   dio: ^5.3.2
+  device_info_plus: ^9.0.3
   equatable: ^2.0.5
+  flutter_html: ^3.0.0-beta.2
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   firebase_analytics: ^10.4.4
   flutter_bloc: ^8.1.3
+  intl: ^0.18.1
+  local_session_timeout: ^2.3.0
+  shared_preferences: ^2.2.0
+
 
 
 
