--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
     flutter_bloc: ^8.1.3
     intl: ^0.18.1
     local_session_timeout: ^2.3.0
-    shared_preferences:
-        ^2.2.0
+    shared_preferences: ^2.2.0
+    session_next: ^0.1.0
 
         # The following adds the Cupertino Icons font to your application.
         # Use with the CupertinoIcons class for iOS style icons.
